--- a/webextensions/_locales/en/messages.json
+++ b/webextensions/_locales/en/messages.json
@@ -268,9 +268,17 @@
   "message_startup_history_after":      { "message": " for more details." },
 
   "message_startup_requestPermissions_description": { "message": "⚠There are some features requiring extra permissions. If you want to activate them, please grant permissions manually." },
-  "message_startup_requestPermissions_bookmarks": { "message": "\"Bookmark This Tree\" in the context menu on tabs, auto migration of bookmarked internal URLs imported from other environments, and detection of tabs opened from bookmarks (requires access to bookmarks)" },
-  "message_startup_requestPermissions_allUrls":   { "message": "Show tab preview image on tab hover / Don't expand collapsed tree and skip collapsed descendants, while switching focus of tabs via keyboard shortcuts / Don't restore blank window which was for a closed dialog, by actions to restore closed tabs" },
-  "message_startup_requestPermissions_clipboardRead": { "message": "Allow to open a new tab with the URL in the clipboard, by middle click on the \"New Tab\" button (*you may need to activate \"dom.events.asyncClipboard.clipboardItem\")" },
+  "message_startup_requestPermissions_bookmarks": { "message": "Read and modify bookmarks" },
+  "message_startup_requestPermissions_bookmarks_contextMenuItems": { "message": "\"Bookmark This Tree\" in the context menu on tabs" },
+  "message_startup_requestPermissions_bookmarks_migrationForImportedBookmarks": { "message": "Auto migration of bookmarked internal URLs imported from other environments" },
+  "message_startup_requestPermissions_bookmarks_detectTabsFromBookmarks": { "message": "Detection of tabs opened from bookmarks" },
+  "message_startup_requestPermissions_allUrls":   { "message": "Run script on web contents" },
+  "message_startup_requestPermissions_allUrls_tabPreviewPanel":   { "message": "Show tab preview image on tab hover" },
+  "message_startup_requestPermissions_allUrls_skipCollapsedTabsWithCtrlTab":   { "message": "Don't expand collapsed tree and skip collapsed descendants, while switching focus of tabs via keyboard shortcuts" },
+  "message_startup_requestPermissions_allUrls_preventBlankDialogRestoration":   { "message": "Don't restore blank window which was for a closed dialog, by actions to restore closed tabs" },
+  "message_startup_requestPermissions_clipboardRead": { "message": "Read clipboard contents" },
+  "message_startup_requestPermissions_clipboardRead_newTabButtonMiddleClick": { "message": "Allow to open a new tab with the URL in the clipboard, by middle click on the \"New Tab\" button (*you may need to activate \"dom.events.asyncClipboard.clipboardItem\")" },
+
 
   "message_startup_userChromeCss_notify": { "message": "How to hide top tab bar and sidebar header?" },
   "message_startup_userChromeCss_description_1": { "message": "Due to restrictions of WebExtensions, Tree Style Tab cannot control the browser's top tab bar and the sidebar header. If you need to control them, see " },
