--- a/webextensions/_locales/ru/messages.json
+++ b/webextensions/_locales/ru/messages.json
@@ -257,9 +257,16 @@
   "message_startup_history_after":      { "message": "." },
 
   "message_startup_requestPermissions_description": { "message": "⚠Есть некоторые функции, требующие дополнительных разрешений. Если вы хотите их активировать, дайте разрешения вручную." },
-  "message_startup_requestPermissions_bookmarks": { "message": "\"Это дерево в закладки…\" в контекстном меню на вкладках (нужен доступ к закладкам.)" },
-  "message_startup_requestPermissions_allUrls":   { "message": "Не разворачивать свернутое дерево и пропускать свернутые дочерние вкладки при переключении фокуса вкладок горячими клавишами. / Don't restore blank window which was for a closed dialog, by actions to restore closed tabs." },
-  "message_startup_requestPermissions_clipboardRead": { "message": "Разрешить открывать новую вкладку по ссылке из буфера обмена, при нажатии колесиком мышки на кнопке \"Новая вкладка\" (*может понадобится активация \"dom.events.asyncClipboard.clipboardItem\")" },
+  "message_startup_requestPermissions_bookmarks": { "message": "Доступ к закладкам" },
+  "message_startup_requestPermissions_bookmarks_contextMenuItems": { "message": "\"Это дерево в закладки…\" в контекстном меню на вкладках" },
+  "_message_startup_requestPermissions_bookmarks_migrationForImportedBookmarks": { "message": "" },
+  "_message_startup_requestPermissions_bookmarks_detectTabsFromBookmarks": { "message": "" },
+  "_message_startup_requestPermissions_allUrls":   { "message": "" },
+  "_message_startup_requestPermissions_allUrls_tabPreviewPanel":   { "message": "" },
+  "message_startup_requestPermissions_allUrls_skipCollapsedTabsWithCtrlTab":   { "message": "Не разворачивать свернутое дерево и пропускать свернутые дочерние вкладки при переключении фокуса вкладок горячими клавишами." },
+  "_message_startup_requestPermissions_allUrls_preventBlankDialogRestoration":   { "message": "" },
+  "_message_startup_requestPermissions_clipboardRead": { "message": "" },
+  "message_startup_requestPermissions_clipboardRead_newTabButtonMiddleClick": { "message": "Разрешить открывать новую вкладку по ссылке из буфера обмена, при нажатии колесиком мышки на кнопке \"Новая вкладка\" (*может понадобится активация \"dom.events.asyncClipboard.clipboardItem\")" },
 
   "message_startup_userChromeCss_notify": { "message": "Как скрывать верхнюю панель вкладок и заголовок боковой панели?" },
   "message_startup_userChromeCss_description_1": { "message": "Из-за ограничений WebExtensions, TST не может контролировать верхнюю панель вкладок и заголовок боковой панели. Если вам нужно настроить их, см. " },
