--- a/webextensions/_locales/zh_CN/messages.json
+++ b/webextensions/_locales/zh_CN/messages.json
@@ -627,18 +627,16 @@
   "message_startup_history_after": {
     "message": "了解更多细节。"
   },
-  "message_startup_requestPermissions_description": {
-    "message": "⚠有些功能需要额外的权限。如果要开启它们，请手动授予权限。"
-  },
-  "message_startup_requestPermissions_bookmarks": {
-    "message": "标签页上下文菜单中的 “将此标签树添加到书签” ，对从其它环境导入、已被添加到书签的那些内部网址的自动迁移，以及从书签项打开的标签页的检测（需要有访问书签项的权限）"
-  },
-  "message_startup_requestPermissions_allUrls": {
-    "message": "当通过键盘快捷键切换标签页焦点时，不展开已折叠标签树并跳过已折叠后代项 / 在恢复已关闭标签页时，不要恢复那些用于已关闭对话框的空白窗口。"
-  },
-  "message_startup_requestPermissions_clipboardRead": {
-    "message": "允许在使用中键点击 \"新建标签页 \" 按钮时用新标签页打开剪贴板中的地址（ * 您可能需要开启 \"dom.events.asyncClipboard.clipboardItem\"）"
-  },
+  "message_startup_requestPermissions_bookmarks": { "message": "访问书签项的权限" },
+  "message_startup_requestPermissions_bookmarks_contextMenuItems": { "message": "标签页上下文菜单中的 “将此标签树添加到书签” ，对从其它环境导入、已被添加到书签的那些内部网址的自动迁移，以及从书签项打开的标签页的检测" },
+  "_message_startup_requestPermissions_bookmarks_migrationForImportedBookmarks": { "message": "" },
+  "_message_startup_requestPermissions_bookmarks_detectTabsFromBookmarks": { "message": "" },
+  "_message_startup_requestPermissions_allUrls":   { "message": "" },
+  "_message_startup_requestPermissions_allUrls_tabPreviewPanel":   { "message": "" },
+  "message_startup_requestPermissions_allUrls_skipCollapsedTabsWithCtrlTab":   { "message": "当通过键盘快捷键切换标签页焦点时，不展开已折叠标签树并跳过已折叠后代项" },
+  "message_startup_requestPermissions_allUrls_preventBlankDialogRestoration":   { "message": "在恢复已关闭标签页时，不要恢复那些用于已关闭对话框的空白窗口" },
+  "_message_startup_requestPermissions_clipboardRead": { "message": "" },
+  "message_startup_requestPermissions_clipboardRead_newTabButtonMiddleClick": { "message": "允许在使用中键点击 \"新建标签页 \" 按钮时用新标签页打开剪贴板中的地址（ * 您可能需要开启 \"dom.events.asyncClipboard.clipboardItem\"）" },
   "message_startup_userChromeCss_notify": {
     "message": "如何隐藏顶部的标签栏和侧栏的标题？"
   },
