--- a/webextensions/_locales/ja/messages.json
+++ b/webextensions/_locales/ja/messages.json
@@ -415,6 +415,8 @@
   "config_animationForce_label": { "message": "アニメーションを抑制するプラットフォームの設定を無視して有効にする" },
   "config_tabPreviewTooltip_label": { "message": "タブの上にカーソルを乗せたとき、ツールチップの代わりにタブのプレビュー画像を表示する（※Webページ内でのスクリプトの実行を許可する必要があります）" },
   "config_tabPreviewTooltipInSidebar_label": { "message": "プレビューをサイドバー外に表示できないときはサイドバー内で表示する" },
+  "config_tabPreviewTooltipOffsetTop_label_before": { "message": "プライバシー優先時（\"privacy.resistFingerprinting\"=\"true\"に設定している場合など）でサイドバーのヘッダーの高さを検出できない場合に、プレビューの表示位置を縦方向に" },
+  "config_tabPreviewTooltipOffsetTop_label_after": { "message": "ピクセルずらす" },
   "config_showCollapsedDescendantsByTooltip_label": { "message": "タブのツールチップに折りたたまれた子孫タブの情報を含める" },
   "config_shiftTabsForScrollbarDistance_label_before": { "message": "自動的に表示されるスクロールバーに覆われてタブ内のボタンに触れなくならないよう、" },
   "config_shiftTabsForScrollbarDistance_label_after": { "message": "ぶんだけタブをずらして表示する" },
